Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Graphics Designer Portfolio</title>
-
+  <title>Audery</title>
+<!-- favicon -->
+  <link rel="icon" href="favicon.png" type="Motherchod.png">
   <!-- SDKs & Tailwind -->
   <script src="/_sdk/element_sdk.js"></script>
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
@@ -307,3 +308,4 @@ class="border-2 border-purple-600 text-purple-600 px-8 py-4 rounded-full font-se
 
 </body>
 </html>
+
