--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="text-center z-10 px-6 max-w-4xl">
           <div class="profile-wrapper mb-6">
         <div class="profile-ring" id="profile-ring">
-          <img src="Cute.jpg" alt="Profile photo" />
+          <img src="Cock.jpeg" alt="Profile photo" />
         </div>
       </div>
     <h1 class="text-5xl md:text-7xl font-bold mb-6" id="hero-name">Ahnaf Audry</h1>
@@ -308,4 +308,5 @@ class="border-2 border-purple-600 text-purple-600 px-8 py-4 rounded-full font-se
 
 </body>
 </html>
+
 
