--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Audery</title>
 <!-- favicon -->
-  <link rel="icon" href="favicon.png" type="Motherchod.png">
+  <link rel="icon" href="Motherchod.png" type="favicon/png">
   <!-- SDKs & Tailwind -->
   <script src="/_sdk/element_sdk.js"></script>
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
@@ -308,5 +308,6 @@ class="border-2 border-purple-600 text-purple-600 px-8 py-4 rounded-full font-se
 
 </body>
 </html>
+
 
 
