Add favicon to start-project.html
Added a favicon link to the HTML head.

--- a/start-project.html
+++ b/start-project.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Start a Project</title>
+  <!-- favicon -->
+  <link rel="icon" href="Motherchod.png" type="favicon/png">
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -139,3 +141,4 @@
 
 </body>
 </html>
+
