--- a/video-editing.html
+++ b/video-editing.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>Video Editing | Portfolio</title>
+  <!-- favicon -->
+  <link rel="icon" href="Motherchod.png" type="favicon/png">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Tailwind -->
@@ -212,3 +215,4 @@
   </script>
 </body>
 </html>
+
