--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ class="border-2 border-purple-600 text-purple-600 px-8 py-4 rounded-full font-se
         <div class="flex space-x-6">
 
   <!-- Facebook -->
-  <a href="https://facebook.com/XXX"
+  <a href="https://www.facebook.com/share/17qAYZgosJ/"
      target="_blank"
      class="text-gray-400 hover:text-white transition-colors">
     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
@@ -273,7 +273,7 @@ class="border-2 border-purple-600 text-purple-600 px-8 py-4 rounded-full font-se
   </a>
 
   <!-- Instagram -->
-<a href="https://instagram.com/YOUR_USERNAME"
+<a href="https://www.instagram.com/ahnaf.audry?igsh=MThsNGI3NWg0cW5vcw=="
    target="_blank"
    class="text-gray-400 hover:text-white transition-colors">
   <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="1.8"
@@ -285,7 +285,7 @@ class="border-2 border-purple-600 text-purple-600 px-8 py-4 rounded-full font-se
 </a>
 
   <!-- YouTube -->
-  <a href="https://youtube.com/XXX"
+  <a href="https://www.youtube.com/@piderm"
      target="_blank"
      class="text-gray-400 hover:text-white transition-colors">
     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
@@ -308,6 +308,7 @@ class="border-2 border-purple-600 text-purple-600 px-8 py-4 rounded-full font-se
 
 </body>
 </html>
+
 
 
 
