--- a/brand-identity.html
+++ b/brand-identity.html
@@ -152,11 +152,11 @@
         </div>
       </div>
 
-      <!-- Gallery Card -->
+      <!-- Gallery Card 8-->
       <div class="card-hover rounded-2xl overflow-hidden bg-white shadow-lg">
         <div class="relative group">
           <img
-            src="brand-identity/WhatsApp Image 2025-03-17 at 7.12.44 PM.jpeg"
+            src="brand-identity/No_name.png"
             alt="Brand Project"
             class="gallery-img w-full h-64 object-cover transition duration-500 cursor-pointer"
           />
@@ -215,4 +215,5 @@
   </script>
 </body>
 </html>
+
 
