--- a/brand-identity.html
+++ b/brand-identity.html
@@ -156,7 +156,7 @@
       <div class="card-hover rounded-2xl overflow-hidden bg-white shadow-lg">
         <div class="relative group">
           <img
-            src="brand-identity/No_name.png"
+            src="brand-identity/No_name,png.png"
             alt="Brand Project"
             class="gallery-img w-full h-64 object-cover transition duration-500 cursor-pointer"
           />
@@ -215,5 +215,6 @@
   </script>
 </body>
 </html>
+
 
 
